@@ -1,3 +1,7 @@
+2001-02-28  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "sv" to ALL_LINGUAS.
+
 2001-01-10  JP Rosevear  <jpr@helixcode.com>
 
 	* scintilla-control/scintilla/ScintillaGTK.cxx: proper casting
